# world-covid-news

./: .env.example  README.md  app.py  config.py  db.py  pyproject.toml  railway.json  requirements.txt  seed_db.py
helpers/: functions.py
scripts/: clear_db.py  create_tables.py  save_country_info.py
scripts/data/: countries_info.csv
static/: script.js  styles.css
templates/: home.html
